--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <header id="repulse-div" class="large-hero__text-content">
       <div id="banner-overlay" class="wrapper">
         <h1 class="large-hero__title">Zheng Lai</h1>
-        <p class="large-hero__description">A technical business analyst with a passion for writing modular code.</p>
+        <p class="large-hero__description">A business analyst with a passion for writing modular code.</p>
       </div>
       <a id="banner-overlay-button" href="#my-work" class="large-hero__button">Learn More</a>
     </header>
@@ -54,7 +54,7 @@
   <section id="my-work" class="page-section">
     <div class="wrapper">
 
-      <div class="generic-content-container generic-content-container--medium generic-content-container--center">
+      <div class="generic-content-container generic-content-container--center">
         <h2 id="projects" class="section-title section-title--grey">Projects</h2>
         <p>
           Designed and implemented by me.
@@ -63,7 +63,7 @@
 
       <div class="flex-row flex-row--align-center subsection subsection--narrow">
         <div
-          class="flex-row__item-half flex-row__item-half--small generic-content-container generic-content-container--medium">
+          class="flex-row__item-half flex-row__item-half--small generic-content-container">
           <h3 class="subsection-title subsection-title--grey">
             React Multi-step Form Library
           </h3>
@@ -71,12 +71,12 @@
             A React library for users to easily create interactive multi-step forms using declarative code. Inputs are
             displayed one at a time, with input validation occurring when the "Next" button is clicked.
           </p>
-          <a href="https://github.com/z2lai/react-emotion-multi-step-form" class="link link--large">
+          <a href="https://github.com/z2lai/react-emotion-multi-step-form" class="link">
             <svg class="link__icon">
               <use xlink:href="assets/images/icons/symbol-defs.svg#icon-github"></use>
             </svg>Github
           </a>
-          <a href="https://z2lai.github.io/react-emotion-multi-step-form/" class="link link--large">
+          <a href="https://z2lai.github.io/react-emotion-multi-step-form/" class="link">
             <svg class="link__icon">
               <use xlink:href="assets/images/icons/symbol-defs.svg#icon-sphere"></use>
             </svg>Website
@@ -199,7 +199,7 @@
       <div class="flex-row subsection subsection--narrow subsection--divider subsection--last">
 
         <div class="flex-row__item-half flex-row__item-half--extra-large">
-          <div class="generic-content-container generic-content-container--medium">
+          <div class="generic-content-container">
             <h3 class="subsection-title subsection-title--grey">
               Portfolio Website
             </h3>
@@ -208,7 +208,7 @@
               minimal
               navigation.
             </p>
-            <a href="https://github.com/z2lai/portfolio-website" class="link link--large">
+            <a href="https://github.com/z2lai/portfolio-website" class="link">
               <svg class="link__icon">
                 <use xlink:href="assets/images/icons/symbol-defs.svg#icon-github"></use>
               </svg>Github
@@ -320,7 +320,7 @@
   <section id="about" class="page-section page-section--about">
     <div class="wrapper wrapper--no-padding-until-medium">
       <div
-        class="generic-content-container generic-content-container--medium generic-content-container--center generic-content-container--overlay">
+        class="generic-content-container generic-content-container--center generic-content-container--overlay">
         <h2 id="about" class="section-title section-title--white">About</h2>
         <p>
           My background and experience.
