--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="#banner">Home</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#testimonials">Contact</a></li>
+          <li><a href="#links">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -375,7 +375,7 @@
         </div>
       </div>
 
-      <div class="subsection flex-column">
+      <div id="links" class="subsection flex-column">
         <ul class="flex-row flex-row--centered flex-column__item">
           <li>
             <a href="https://www.linkedin.com/in/zheng-lai-9a30808b/" class="button button--round">
