adjusted header background color and page-section padding to equally space headings from header

--- a/app/index.html
+++ b/app/index.html
@@ -51,11 +51,11 @@
     </header>
   </section>
 
-  <section id="my-work" class="page-section">
+  <section id="projects" class="page-section">
     <div class="wrapper">
 
       <div class="generic-content-container generic-content-container--center">
-        <h2 id="projects" class="section-title section-title--grey">Projects</h2>
+        <h2 class="section-title section-title--grey">Projects</h2>
         <p>
           Designed and implemented by me.
         </p>
@@ -321,7 +321,7 @@
     <div class="wrapper wrapper--no-padding-until-medium">
       <div
         class="generic-content-container generic-content-container--center generic-content-container--overlay">
-        <h2 id="about" class="section-title section-title--white">About</h2>
+        <h2 class="section-title section-title--white">About</h2>
         <p>
           My background and experience.
         </p>
