added underline to nav links on hover

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
         <h1 class="large-hero__title">Zheng Lai</h1>
         <p class="large-hero__description">A business analyst with a passion for writing modular code.</p>
       </div>
-      <a id="banner-overlay-button" href="#my-work" class="large-hero__button">Learn More</a>
+      <a id="banner-overlay-button" href="#projects" class="large-hero__button">Learn More</a>
     </header>
   </section>
 
