--- a/app/index.html
+++ b/app/index.html
@@ -111,7 +111,7 @@
           </li>
         </ul>
         <div class="flex-row flex-row--gutters generic-content-container">
-          <div class="flex-row__item flex-row__item-4">
+          <div class="flex-row__item flex-row__item--feature-item">
             <div class="feature-item">
 
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
@@ -123,7 +123,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item-4">
+          <div class="flex-row__item flex-row__item--feature-item">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
@@ -135,7 +135,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item-4">
+          <div class="flex-row__item flex-row__item--feature-item">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
@@ -147,7 +147,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item-4">
+          <div class="flex-row__item flex-row__item--feature-item">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
@@ -159,7 +159,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item-4">
+          <div class="flex-row__item flex-row__item--feature-item">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
@@ -171,7 +171,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item-4">
+          <div class="flex-row__item flex-row__item--feature-item">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
