--- a/index.html
+++ b/index.html
@@ -93,25 +93,25 @@
         <h4 class="subsection-subtitle subsection-subtitle--grey">
           Highlights
         </h4>
-        <ul class="icon-list flex-row flex-row--centered">
+        <ul id="p1-tech-list" class="icon-list flex-row flex-row--centered">
           <li>
-            <svg class="icon-list__icon">
+            <svg class="icon-list__icon" data-tech="react">
               <use xlink:href="assets/images/icons/symbol-defs.svg#icon-react"></use>
             </svg>
           </li>
           <li>
-            <svg class="icon-list__icon">
+            <svg class="icon-list__icon" data-tech="html5">
               <use xlink:href="assets/images/icons/symbol-defs.svg#icon-html5-original"></use>
             </svg>
           </li>
           <li>
-            <svg class="icon-list__icon">
+            <svg class="icon-list__icon" data-tech="css3">
               <use xlink:href="assets/images/icons/symbol-defs.svg#icon-css3-original"></use>
             </svg>
           </li>
         </ul>
-        <div class="flex-row flex-row--gutters generic-content-container">
-          <div class="flex-row__item flex-row__item--feature-item">
+        <div id="p1-feature-list" class="flex-row generic-content-container">
+          <div class="flex-row__item flex-row__item--feature-item js-feature js-feature--react">
             <div class="feature-item">
 
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
@@ -123,7 +123,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--feature-item">
+          <div class="flex-row__item flex-row__item--feature-item js-feature js-feature--html5">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
@@ -135,7 +135,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--feature-item">
+          <div class="flex-row__item flex-row__item--feature-item js-feature js-feature--css3">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
@@ -147,7 +147,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--feature-item">
+          <div class="flex-row__item flex-row__item--feature-item js-feature js-feature--react">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
@@ -159,7 +159,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--feature-item">
+          <div class="flex-row__item flex-row__item--feature-item js-feature js-feature--html5">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
@@ -171,7 +171,7 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--feature-item">
+          <div class="flex-row__item flex-row__item--feature-item js-feature js-feature--css3">
             <div class="feature-item">
               <img class="feature-item__icon" src="assets/images/icons/rain.svg">
               <h5 class="feature-item__title">HTML5 Form Validation</h5>
