--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
           </p>
           <a href="https://github.com/z2lai/react-emotion-multi-step-form" class="link">
             <svg class="link__icon">
-              <use xlink:href="assets/images/icons/symbol-defs.svg#icon-github"></use>
+              <use xlink:href="assets/icons/symbol-defs.svg#icon-github"></use>
             </svg>Github
           </a>
           <a href="https://z2lai.github.io/react-emotion-multi-step-form/" class="link">
             <svg class="link__icon">
-              <use xlink:href="assets/images/icons/symbol-defs.svg#icon-sphere"></use>
+              <use xlink:href="assets/icons/symbol-defs.svg#icon-sphere"></use>
             </svg>Website
           </a>
         </div>
@@ -93,29 +93,28 @@
         <h4 class="subsection-subtitle subsection-subtitle--grey">
           Highlights
         </h4>
-        <ul id="p1-tech-list" class="icon-list flex-row flex-row--centered">
+        <ul id="p1-tech-icons" class="icon-list flex-row flex-row--centered">
           <li>
             <svg class="icon-list__icon" data-tech="react">
-              <use xlink:href="assets/images/icons/symbol-defs.svg#icon-react"></use>
+              <use xlink:href="assets/icons/symbol-defs.svg#icon-react"></use>
             </svg>
           </li>
           <li>
             <svg class="icon-list__icon" data-tech="html5">
-              <use xlink:href="assets/images/icons/symbol-defs.svg#icon-html5-original"></use>
+              <use xlink:href="assets/icons/symbol-defs.svg#icon-html5-original"></use>
             </svg>
           </li>
           <li>
             <svg class="icon-list__icon" data-tech="css3">
-              <use xlink:href="assets/images/icons/symbol-defs.svg#icon-css3-original"></use>
+              <use xlink:href="assets/icons/symbol-defs.svg#icon-css3-original"></use>
             </svg>
           </li>
         </ul>
-        <div id="p1-feature-list" class="flex-row generic-content-container">
-          <div class="flex-row__item flex-row__item--feature-item js-feature js-feature--react">
-            <div class="feature-item">
-
-              <img class="feature-item__icon" src="assets/images/icons/rain.svg">
-              <h5 class="feature-item__title">Declarative Configuration</h5>
+        <div id="p1-tech-features" class="flex-row generic-content-container">
+          <div class="flex-row__item flex-row__item--4 feature js-feature js-feature--react">
+            <div class="feature__item feature__item--icon">
+              <img class="feature__icon" src="assets/icons/rain.svg">
+              <h5 class="feature__title">Declarative Configuration</h5>
               <p>
                 I implemented the input components using custom hooks and compound components pattern to allow the user
                 to declaratively configure the inputs.
@@ -123,10 +122,10 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--feature-item js-feature js-feature--html5">
-            <div class="feature-item">
-              <img class="feature-item__icon" src="assets/images/icons/rain.svg">
-              <h5 class="feature-item__title">HTML5 Form Validation</h5>
+          <div class="flex-row__item flex-row__item--4 feature js-feature js-feature--html5">
+            <div class="feature__item feature__item--icon">
+              <img class="feature__icon" src="assets/icons/rain.svg">
+              <h5 class="feature__title">HTML5 Form Validation</h5>
               <p>
                 Form state management is a common problem that I wanted to solve using concepts such as state colocation
                 and logically
@@ -135,10 +134,10 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--feature-item js-feature js-feature--css3">
-            <div class="feature-item">
-              <img class="feature-item__icon" src="assets/images/icons/rain.svg">
-              <h5 class="feature-item__title">HTML5 Form Validation</h5>
+          <div class="flex-row__item flex-row__item--4 feature js-feature js-feature--css3">
+            <div class="feature__item feature__item--icon">
+              <img class="feature__icon" src="assets/icons/rain.svg">
+              <h5 class="feature__title">HTML5 Form Validation</h5>
               <p>
                 Form state management is a common problem that I wanted to solve using concepts such as state colocation
                 and logically
@@ -147,10 +146,10 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--feature-item js-feature js-feature--react">
-            <div class="feature-item">
-              <img class="feature-item__icon" src="assets/images/icons/rain.svg">
-              <h5 class="feature-item__title">HTML5 Form Validation</h5>
+          <div class="flex-row__item flex-row__item--4 feature js-feature js-feature--react">
+            <div class="feature__item feature__item--icon">
+              <img class="feature__icon" src="assets/icons/rain.svg">
+              <h5 class="feature__title">HTML5 Form Validation</h5>
               <p>
                 Form state management is a common problem that I wanted to solve using concepts such as state colocation
                 and logically
@@ -159,10 +158,10 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--feature-item js-feature js-feature--html5">
-            <div class="feature-item">
-              <img class="feature-item__icon" src="assets/images/icons/rain.svg">
-              <h5 class="feature-item__title">HTML5 Form Validation</h5>
+          <div class="flex-row__item flex-row__item--4 feature js-feature js-feature--html5">
+            <div class="feature__item feature__item--icon">
+              <img class="feature__icon" src="assets/icons/rain.svg">
+              <h5 class="feature__title">HTML5 Form Validation</h5>
               <p>
                 Form state management is a common problem that I wanted to solve using concepts such as state colocation
                 and logically
@@ -171,10 +170,10 @@
             </div>
           </div>
 
-          <div class="flex-row__item flex-row__item--feature-item js-feature js-feature--css3">
-            <div class="feature-item">
-              <img class="feature-item__icon" src="assets/images/icons/rain.svg">
-              <h5 class="feature-item__title">HTML5 Form Validation</h5>
+          <div class="flex-row__item flex-row__item--4 feature js-feature js-feature--css3">
+            <div class="feature__item feature__item--icon">
+              <img class="feature__icon" src="assets/icons/rain.svg">
+              <h5 class="feature__title">HTML5 Form Validation</h5>
               <p>
                 Form state management is a common problem that I wanted to solve using concepts such as state colocation
                 and logically
@@ -187,7 +186,7 @@
 
       <div
         class="subsection subsection--extra-narrow frame frame--extra-padded generic-content-container generic-content-container--center">
-        <h4 class="subsection-subtitle subsection-subtitle--grey">
+        <h4 class="subsection-subtitle subsection-subtitle--inline subsection-subtitle--grey">
           Lesson Learnt
         </h4>
         <p>
@@ -210,7 +209,7 @@
             </p>
             <a href="https://github.com/z2lai/portfolio-website" class="link">
               <svg class="link__icon">
-                <use xlink:href="assets/images/icons/symbol-defs.svg#icon-github"></use>
+                <use xlink:href="assets/icons/symbol-defs.svg#icon-github"></use>
               </svg>Github
             </a>
           </div>
@@ -221,60 +220,60 @@
             <ul class="icon-list flex-row flex-row--centered">
               <li>
                 <svg class="icon-list__icon icon-list__icon--small">
-                  <use xlink:href="assets/images/icons/symbol-defs.svg#icon-react"></use>
+                  <use xlink:href="assets/icons/symbol-defs.svg#icon-gulp"></use>
                 </svg>
               </li>
               <li>
                 <svg class="icon-list__icon icon-list__icon--small">
-                  <use xlink:href="assets/images/icons/symbol-defs.svg#icon-html5-original"></use>
+                  <use xlink:href="assets/icons/symbol-defs.svg#icon-browsersync"></use>
                 </svg>
               </li>
               <li>
                 <svg class="icon-list__icon icon-list__icon--small">
-                  <use xlink:href="assets/images/icons/symbol-defs.svg#icon-css3-original"></use>
+                  <use xlink:href="assets/icons/symbol-defs.svg#icon-postcss"></use>
                 </svg>
               </li>
               <li>
                 <svg class="icon-list__icon icon-list__icon--small">
-                  <use xlink:href="assets/images/icons/symbol-defs.svg#icon-css3-original"></use>
+                  <use xlink:href="assets/icons/symbol-defs.svg#icon-webpack"></use>
                 </svg>
               </li>
               <li>
                 <svg class="icon-list__icon icon-list__icon--small">
-                  <use xlink:href="assets/images/icons/symbol-defs.svg#icon-css3-original"></use>
+                  <use xlink:href="assets/icons/symbol-defs.svg#icon-es6"></use>
                 </svg>
               </li>
             </ul>
 
             <div class="flex-row generic-content-container">
-              <div class="flex-row__item flex-row__item-full">
-                <div class="feature-item feature-item--iconless">
-                  <h5 class="feature-item__title">Automated Workflow</h5>
+              <div class="flex-row__item flex-row__item--full feature">
+                <div class="feature__item feature__item--iconless">
+                  <h5 class="feature__title">Automated Workflow</h5>
                   <p>
                     Workflow tools such as gulp to automate building of CSS and JS modules and browser-sync for
                     simultaneous testing on multiple browsers.
                   </p>
                 </div>
               </div>
-              <div class="flex-row__item flex-row__item-full">
-                <div class="feature-item feature-item--iconless">
-                  <h5 class="feature-item__title">Scalable Modular CSS Architecture</h5>
+              <div class="flex-row__item flex-row__item--full feature">
+                <div class="feature__item feature__item--iconless">
+                  <h5 class="feature__title">Scalable Modular CSS Architecture</h5>
                   <p>
                     Scalable modular CSS architecture using PostCSS, BEM and semantic classes.
                   </p>
                 </div>
               </div>
-              <div class="flex-row__item flex-row__item-full">
-                <div class="feature-item feature-item--iconless">
-                  <h5 class="feature-item__title">ES6 Modules and Classes</h5>
+              <div class="flex-row__item flex-row__item--full feature">
+                <div class="feature__item feature__item--iconless">
+                  <h5 class="feature__title">ES6 Modules and Classes</h5>
                   <p>
                     Webpack to transpile and bundle? ES6 modules into single a file.
                   </p>
                 </div>
               </div>
-              <div class="flex-row__item flex-row__item-full">
-                <div class="feature-item feature-item--iconless">
-                  <h5 class="feature-item__title">Mobile-first Design</h5>
+              <div class="flex-row__item flex-row__item--full feature">
+                <div class="feature__item feature__item--iconless">
+                  <h5 class="feature__title">Mobile-first Design</h5>
                   <p>
                     Prioritized content layout with responsive and optimized images.
                   </p>
@@ -380,28 +379,28 @@
           <li>
             <a href="https://www.linkedin.com/in/zheng-lai-9a30808b/" class="button button--round">
               <svg class="button__icon">
-                <use xlink:href="assets/images/icons/symbol-defs.svg#icon-linkedin"></use>
+                <use xlink:href="assets/icons/symbol-defs.svg#icon-linkedin"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="https://github.com/z2lai/" class="button button--round">
               <svg class="button__icon">
-                <use xlink:href="assets/images/icons/symbol-defs.svg#icon-github"></use>
+                <use xlink:href="assets/icons/symbol-defs.svg#icon-github"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="https://codepen.io/your-work/" class="button button--round">
               <svg class="button__icon">
-                <use xlink:href="assets/images/icons/symbol-defs.svg#icon-codepen"></use>
+                <use xlink:href="assets/icons/symbol-defs.svg#icon-codepen"></use>
               </svg>
             </a>
           </li>
           <li>
             <a href="https://github.com/z2lai/" class="button button--round">
               <svg class="button__icon">
-                <use xlink:href="assets/images/icons/symbol-defs.svg#icon-envelope"></use>
+                <use xlink:href="assets/icons/symbol-defs.svg#icon-envelope"></use>
               </svg>
             </a>
           </li>
