--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 
       <div class="flex-row flex-row--align-center subsection subsection--narrow">
         <div
-          class="flex-row__item-half flex-row__item-half--small generic-content-container">
+          class="flex-row__item-half flex-row__item-half--small generic-content-container generic-content-container">
           <h3 class="subsection-title subsection-title--grey">
             React Multi-step Form Library
           </h3>
           <p>
-            A React library for users to easily create interactive multi-step forms using declarative code. Inputs are
-            displayed one at a time, with input validation occurring when the "Next" button is clicked.
+            A React library for developers to easily create interactive multi-step forms using declarative code. Inputs are
+            displayed on separate "pages" and input values are automatically made available for form validation and submission through custom hooks and the Context API.
           </p>
           <a href="https://github.com/z2lai/react-emotion-multi-step-form" class="link">
             <svg class="link__icon">
@@ -116,8 +116,8 @@
               <img class="feature__icon" src="assets/icons/rain.svg">
               <h5 class="feature__title">Declarative Configuration</h5>
               <p>
-                I implemented the input components using custom hooks and compound components pattern to allow the user
-                to declaratively configure the inputs.
+                Input components are implemented using custom hooks and compound components pattern to allow the user
+                to configure the inputs declaratively.
               </p>
             </div>
           </div>
@@ -127,9 +127,7 @@
               <img class="feature__icon" src="assets/icons/rain.svg">
               <h5 class="feature__title">HTML5 Form Validation</h5>
               <p>
-                Form state management is a common problem that I wanted to solve using concepts such as state colocation
-                and logically
-                separated contexts, I've minimized the number of unnecessary renders.
+                Input validation is aligned with the HTML5 standard through the Constraint Validation API to conform to user expectation. Validation logic and error messages can also be customized.
               </p>
             </div>
           </div>
@@ -137,11 +135,9 @@
           <div class="flex-row__item flex-row__item--4 feature js-feature js-feature--css3">
             <div class="feature__item feature__item--icon">
               <img class="feature__icon" src="assets/icons/rain.svg">
-              <h5 class="feature__title">HTML5 Form Validation</h5>
+              <h5 class="feature__title">Optimized Animations</h5>
               <p>
-                Form state management is a common problem that I wanted to solve using concepts such as state colocation
-                and logically
-                separated contexts, I've minimized the number of unnecessary renders.
+                Page transition animations are optimized (60 FPS) for a smooth interactive experience by avoiding reflow and using a custom hook which creates scaling animations for each page.
               </p>
             </div>
           </div>
@@ -149,11 +145,9 @@
           <div class="flex-row__item flex-row__item--4 feature js-feature js-feature--react">
             <div class="feature__item feature__item--icon">
               <img class="feature__icon" src="assets/icons/rain.svg">
-              <h5 class="feature__title">HTML5 Form Validation</h5>
+              <h5 class="feature__title">Form State Management</h5>
               <p>
-                Form state management is a common problem that I wanted to solve using concepts such as state colocation
-                and logically
-                separated contexts, I've minimized the number of unnecessary renders.
+                Form state management is optimized through techniques such as state colocation and logically separated contexts which minimizes the number of unnecessary renders.
               </p>
             </div>
           </div>
@@ -161,7 +155,7 @@
           <div class="flex-row__item flex-row__item--4 feature js-feature js-feature--html5">
             <div class="feature__item feature__item--icon">
               <img class="feature__icon" src="assets/icons/rain.svg">
-              <h5 class="feature__title">HTML5 Form Validation</h5>
+              <h5 class="feature__title">Accessible Keyboard events</h5>
               <p>
                 Form state management is a common problem that I wanted to solve using concepts such as state colocation
                 and logically
@@ -173,7 +167,7 @@
           <div class="flex-row__item flex-row__item--4 feature js-feature js-feature--css3">
             <div class="feature__item feature__item--icon">
               <img class="feature__icon" src="assets/icons/rain.svg">
-              <h5 class="feature__title">HTML5 Form Validation</h5>
+              <h5 class="feature__title">Responsive Design</h5>
               <p>
                 Form state management is a common problem that I wanted to solve using concepts such as state colocation
                 and logically
@@ -217,45 +211,45 @@
             <h4 class="subsection-subtitle subsection-subtitle--inline subsection-subtitle--grey">
               Highlights
             </h4>
-            <ul class="icon-list flex-row flex-row--centered">
+            <ul id="p2-tech-icons" class="icon-list flex-row flex-row--centered">
               <li>
-                <svg class="icon-list__icon icon-list__icon--small">
+                <svg class="icon-list__icon icon-list__icon--small" data-tech="gulp">
                   <use xlink:href="assets/icons/symbol-defs.svg#icon-gulp"></use>
                 </svg>
               </li>
               <li>
-                <svg class="icon-list__icon icon-list__icon--small">
+                <svg class="icon-list__icon icon-list__icon--small" data-tech="browsersync">
                   <use xlink:href="assets/icons/symbol-defs.svg#icon-browsersync"></use>
                 </svg>
               </li>
               <li>
-                <svg class="icon-list__icon icon-list__icon--small">
+                <svg class="icon-list__icon icon-list__icon--small" data-tech="postcss">
                   <use xlink:href="assets/icons/symbol-defs.svg#icon-postcss"></use>
                 </svg>
               </li>
               <li>
-                <svg class="icon-list__icon icon-list__icon--small">
+                <svg class="icon-list__icon icon-list__icon--small" data-tech="webpack">
                   <use xlink:href="assets/icons/symbol-defs.svg#icon-webpack"></use>
                 </svg>
               </li>
               <li>
-                <svg class="icon-list__icon icon-list__icon--small">
+                <svg class="icon-list__icon icon-list__icon--small" data-tech="es6">
                   <use xlink:href="assets/icons/symbol-defs.svg#icon-es6"></use>
                 </svg>
               </li>
             </ul>
 
-            <div class="flex-row generic-content-container">
-              <div class="flex-row__item flex-row__item--full feature">
+            <div id="p2-tech-features" class="flex-row generic-content-container">
+              <div class="flex-row__item flex-row__item--full feature js-feature js-feature--gulp js-feature--browsersync">
                 <div class="feature__item feature__item--iconless">
                   <h5 class="feature__title">Automated Workflow</h5>
                   <p>
-                    Workflow tools such as gulp to automate building of CSS and JS modules and browser-sync for
+                    Workflow tools such as Gulp to automate building of CSS and JS modules and Browsersync for
                     simultaneous testing on multiple browsers.
                   </p>
                 </div>
               </div>
-              <div class="flex-row__item flex-row__item--full feature">
+              <div class="flex-row__item flex-row__item--full feature js-feature js-feature--postcss">
                 <div class="feature__item feature__item--iconless">
                   <h5 class="feature__title">Scalable Modular CSS Architecture</h5>
                   <p>
@@ -263,7 +257,7 @@
                   </p>
                 </div>
               </div>
-              <div class="flex-row__item flex-row__item--full feature">
+              <div class="flex-row__item flex-row__item--full feature js-feature js-feature--webpack js-feature--es6">
                 <div class="feature__item feature__item--iconless">
                   <h5 class="feature__title">ES6 Modules and Classes</h5>
                   <p>
@@ -271,7 +265,7 @@
                   </p>
                 </div>
               </div>
-              <div class="flex-row__item flex-row__item--full feature">
+              <div class="flex-row__item flex-row__item--full feature js-feature">
                 <div class="feature__item feature__item--iconless">
                   <h5 class="feature__title">Mobile-first Design</h5>
                   <p>
